--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,5 +3,5 @@
 # description: Main tasks file with include for DNS configuration and hostsfile entry.
 ---
 - include: resolv.yml
-  when: vmguest_network_type == "static"
+  when: vmguest_network_type is defined and vmguest_network_type == "static"
   #- include: hostsfile.yml
