--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,4 +4,5 @@
 ---
 - include: resolv.yml
   when: vmguest_network_type is defined and vmguest_network_type == "static"
-  #- include: hostsfile.yml
+
+- include: hostsfile.yml
