--- a/tasks/nfs.yml
+++ b/tasks/nfs.yml
@@ -3,17 +3,18 @@
     path: /opt/nfs-mount/
     state: directory
 
-- name: mount nfs 
-  hosts: all
+ name: Install NFS mount utility
   become: true
-  vars:
-    mynfs: "10.10.200.31:/data"
-    mountpoint: "/opt/nfs-mount"
+  yum:
+    name: nfs-utils
+    state: present
+
+- name: Mount NFS share
+  become: true
+   ansible.posix.mount:
+    fstype: nfs
+    src: "10.10.200.31:/data"
+    path: "/opt/nfs-mount"
     permission: '0777'
-    myopts: 'rw,sync'
-  tasks:
-    - name: nfs utility present
-      ansible.builtin.yum:
-        name:
-          - nfs-utils
-        state: present
+    opts: 'rw,sync'
+    state: mounted
